--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
     "next": "14.2.13",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
   },
